exp_results/make_out2.txt
In file included from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.hpp:10,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.cpp:1:
/home/sakakibara/monte-carlo-ray-tracer_approx/lib/nlohmann/nlohmann/json.hpp: In static member function ‘static CharType nlohmann::detail::binary_writer<BasicJsonType, CharType>::to_char_type(uint8_t)’:
/home/sakakibara/monte-carlo-ray-tracer_approx/lib/nlohmann/nlohmann/json.hpp:12484:28: warning: ‘template<class _Tp> struct std::is_pod’ is deprecated: use is_standard_layout && is_trivial instead [-Wdeprecated-declarations]
12484 |         static_assert(std::is_pod<CharType>::value, "CharType must be POD");
      |                            ^~~~~~
In file included from /usr/include/c++/11/ratio:39,
                 from /usr/include/c++/11/chrono:39,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.hpp:3,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.cpp:1:
/usr/include/c++/11/type_traits:733:5: note: declared here
  733 |     is_pod
      |     ^~~~~~
In file included from /home/sakakibara/monte-carlo-ray-tracer_approx/lib/glm/glm/detail/type_half.hpp:16,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/lib/glm/glm/detail/func_packing.inl:5,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/lib/glm/glm/packing.hpp:173,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/lib/glm/glm/glm.hpp:132,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/film.hpp:7,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.hpp:13,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.cpp:1:
/home/sakakibara/monte-carlo-ray-tracer_approx/lib/glm/glm/detail/type_half.inl: In function ‘float glm::detail::overflow()’:
/home/sakakibara/monte-carlo-ray-tracer_approx/lib/glm/glm/detail/type_half.inl:9:27: warning: compound assignment with ‘volatile’-qualified left operand is deprecated [-Wvolatile]
    9 |                         f *= f; // this will overflow before the for loop terminates
      |                         ~~^~~~
In file included from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/../sampling/sampler.hpp:9,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/camera.cpp:13:
/home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/../sampling/../kdtree/random_recoder.hpp: At global scope:
/home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/../sampling/../kdtree/random_recoder.hpp:15:19: error: size of array ‘ranges’ is not an integral constant-expression
   15 |     double ranges[dims][2];
      |                   ^~~~
/home/sakakibara/monte-carlo-ray-tracer_approx/source/camera/../sampling/../kdtree/random_recoder.hpp:27:80: error: size of array ‘ranges’ is not an integral constant-expression
   27 | struct node* make_kdtree(std::vector<sample> samples, int depth, double ranges[dims][2], double pdf);
      |                                                                                ^~~~
make[2]: *** [CMakeFiles/monte-carlo-ray-tracer.dir/build.make:90: CMakeFiles/monte-carlo-ray-tracer.dir/source/camera/camera.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/monte-carlo-ray-tracer.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
